--- a/php-todo/.env
+++ b/php-todo/.env
@@ -3,7 +3,7 @@ APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost:8000
 
-DB_HOST=mysqlserverhost
+DB_HOST=35.157.144.183
 DB_DATABASE=tododb
 DB_USERNAME=mayor
 DB_PASSWORD=Ashabi_123
