--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -29,6 +29,7 @@ pipeline{
             steps {
                 script {
                     sh " docker login -u mayorfaj -p ${env.PASSWORD}"
+                    sh "cd php-todo"
                     sh " docker build -t ${imageName} ."
                 }
             }
