--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -30,6 +30,7 @@ pipeline{
                 script {
                     sh " docker login -u mayorfaj -p ${env.PASSWORD}"
                     sh "cd php-todo"
+                    sh "chmod +x app.sh"
                     sh " docker build -t ${imageName} ."
                 }
             }
