--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -28,10 +28,10 @@ pipeline{
         stage('Building application ') {
             steps {
                 script {
-                    sh " docker login -u mayorfaj -p ${env.PASSWORD}"
-                    sh "cd php-todo"
-                    sh "sudo chmod +x app.sh"
-                    sh " docker build -t ${imageName} ."
+                    sh " docker login -u mayorfaj -p ${env.PASSWORD} "
+                    sh " cd php-todo "
+                    sh " chmod +x app.sh "
+                    sh " docker build -t ${imageName} . "
                 }
             }
         }
