--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -29,8 +29,8 @@ pipeline{
             steps {
                 script {
                     sh " docker login -u mayorfaj -p ${env.PASSWORD} "
-                    sh " cd php-too "
-                    sh " chmod +x app.sh "
+                    sh " cd php-todddo "
+                    //sh " chmod +x app.sh "
                     sh " docker build -t ${imageName} . "
                 }
             }
