--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline{
             steps {
                 script {
                     sh " docker login -u mayorfaj -p ${env.PASSWORD} "
-                    sh " cd php-todddo "
+                    sh " cd php "
                     //sh " chmod +x app.sh "
                     sh " docker build -t ${imageName} . "
                 }
