--- a/php-todo/.env
+++ b/php-todo/.env
@@ -1,7 +1,7 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_URL=http://localhost:8000
+APP_URL=http://35.157.144.183:8000
 
 DB_HOST=35.157.144.183
 DB_DATABASE=tododb
