--- a/php-todo/Jenkinsfile
+++ b/php-todo/Jenkinsfile
@@ -29,8 +29,8 @@ pipeline{
             steps {
                 dir('/php-todo') {
                 script {
-                    sh "echo \$PASSWORD"
-                    sh " docker login -u mayorfaj -p ${env.PASSWORD}"
+                    sh 'echo \$PASSWORD'
+                    sh ' docker login -u mayorfaj -p ${PASSWORD}'
                     sh " docker build -t ${imageName} ."
                 }
             }
