--- a/php-todo/.env
+++ b/php-todo/.env
@@ -1,9 +1,9 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
-APP_URL=http://35.157.144.183:8000
+APP_URL=http://localhost:8000
 
-DB_HOST=35.157.144.183
+DB_HOST=192.168.1.253
 DB_DATABASE=tododb
 DB_USERNAME=mayor
 DB_PASSWORD=Ashabi_123
@@ -12,7 +12,7 @@ DB_PORT=3306
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=sync 
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
